Solved more errors pointed by FindBugs.